End of section 10

--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -18,6 +18,10 @@
             }
             <a routerLink="/errors" routerLinkActive="text-accent">Errors</a>
         </nav>
+        @if (busyService.busyRequestCount()>0) {
+        <span class="loading loading-spinner text-accent"></span>
+        }
+
         <div class="flex align-middle ml-auto gap-3">
 
             <div class="dropdown mr-5 dropdown-end">
@@ -31,7 +35,7 @@
                 </button>
                 <ul tabindex="1" class="dropdown-content menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
                     @for(theme of themes; track $index){
-                        <li (click)="handleSelectThese(theme)"><a>{{theme}}</a></li>
+                    <li (click)="handleSelectThese(theme)"><a>{{theme}}</a></li>
                     }
                 </ul>
             </div>
@@ -41,8 +45,8 @@
                     <img [src]="user?.imageUrl ||'/user.png'" alt="user avatar" class="w-10 h-10 rounded-full">
                     <span>{{user.displayName}}</span>
                 </div>
-                <ul tabindex="-1" class="dropdown-content  menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
-                    <li><a>Edit profile</a></li>
+                <ul tabindex="0" class="dropdown-content  menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
+                    <li><a routerLink="/members/{{user.id}}">Edit profile</a></li>
                     <li><a (click)="logout()">Logout</a></li>
                 </ul>
             </div>
